<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/start_logo"
        android:layout_width="300px"
        android:layout_height="200px"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@id/start_logo"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.seray.view.CustomView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:onClick="onReStartClick"
            android:paddingEnd="16dp"
            app:image_back_color="#e65d5d"
            app:image_src="@drawable/img_shutdown"
            app:text_back_color="#c33534"
            app:text_title="@string/operation_reboot"/>

        <com.seray.view.CustomView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="showSetWebDialog"
            android:paddingEnd="16dp"
            app:image_back_color="#2fb3bf"
            app:image_src="@drawable/icon_web"
            app:text_back_color="#175a5e"
            app:text_title="@string/start_web_setting"/>

        <com.seray.view.CustomView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="startSettingActivity"
            android:paddingEnd="16dp"
            app:image_back_color="#7dc691"
            app:image_src="@drawable/icon_setting"
            app:text_back_color="#508c61"
            app:text_title="@string/manager_go_to_operation"/>

        <com.seray.view.CustomView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="checkIsActivated"
            android:paddingEnd="16dp"
            app:image_back_color="#d98f63"
            app:image_src="@drawable/icon_activate"
            app:text_back_color="#956345"
            app:text_title="@string/start_active"/>

    </LinearLayout>

</RelativeLayout>
