<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_1"
            android:layout_width="0px"
            android:layout_height="@dimen/settingButtonHeight"
            android:layout_weight="0.5"
            android:background="@drawable/selector"
            android:text="@string/test_toOpration"
            android:onClick="setWeight"
            android:textColor="@drawable/tv_selector"
            android:textSize="@dimen/managerTipTextSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_4"
            android:layout_width="0px"
            android:layout_height="@dimen/settingButtonHeight"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:text="@string/test_network"
            android:onClick="setNet"
            android:textColor="@drawable/tv_selector"
            android:textSize="@dimen/managerTipTextSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_8"
            android:layout_width="0px"
            android:layout_height="@dimen/settingButtonHeight"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:text="@string/test_clear_calibration"
            android:onClick="setScreen"
            android:textColor="@drawable/tv_selector"
            android:textSize="@dimen/managerTipTextSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_81"
            android:layout_width="0px"
            android:layout_height="@dimen/settingButtonHeight"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:text="@string/test_down_apk"
            android:onClick="setUpdateApp"
            android:textColor="@drawable/tv_selector"
            android:textSize="@dimen/managerTipTextSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_5"
            android:layout_width="0px"
            android:layout_height="@dimen/settingButtonHeight"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:text="@string/test_exit"
            android:onClick="setExit"
            android:textColor="@drawable/tv_selector"
            android:textSize="@dimen/managerTipTextSize" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="0px"
            android:layout_height="@dimen/settingButtonHeight"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_press_red"
            android:text="@string/operation_back"
            android:onClick="setClose"
            android:textColor="@color/white"
            android:textSize="@dimen/managerTipTextSize" />

    </LinearLayout>

</LinearLayout>