<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              android:paddingTop="15dp"
              android:paddingBottom="15dp">

    <TextView
        android:id="@+id/goodsName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:autoSizeMaxTextSize="@dimen/managerCategoryTextSize"
        android:autoSizeMinTextSize="@dimen/pluMinTextSize"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:autoSizeMaxTextSize="@dimen/managerCategoryTextSize"
        app:autoSizeMinTextSize="@dimen/pluMinTextSize"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        tools:text="@string/goods_name"/>

    <TextView
        android:id="@+id/price_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:text="@string/price_type"/>

    <TextView
        android:id="@+id/deal_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="@dimen/managerCategoryTextSize"
        android:autoSizeMinTextSize="@dimen/pluMinTextSize"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:autoSizeMaxTextSize="@dimen/managerCategoryTextSize"
        app:autoSizeMinTextSize="@dimen/pluMinTextSize"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        tools:text="@string/deal_count"/>

    <TextView
        android:id="@+id/deal_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="@dimen/managerCategoryTextSize"
        android:autoSizeMinTextSize="@dimen/pluMinTextSize"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:autoSizeMaxTextSize="@dimen/managerCategoryTextSize"
        app:autoSizeMinTextSize="@dimen/pluMinTextSize"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        tools:text="@string/deal_amount"/>
</LinearLayout>