<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/payfororder_border"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="bottom">

        <TextView
            android:layout_width="0px"
            android:layout_height="@dimen/payResultTextHeight"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="@string/pay_sum_owing"
            android:textColor="@color/white"
            android:textSize="@dimen/payResultTextSize"/>

        <TextView
            android:id="@+id/payfor_tv1_2"
            android:layout_width="0px"
            android:layout_height="@dimen/payResultTextHeight"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="@string/base_price"
            android:textColor="@color/white"
            android:textSize="@dimen/payResultTextSize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0px"
            android:layout_height="@dimen/payResultTextHeight"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/pay_amount"
            android:textColor="@color/white"
            android:textSize="@dimen/payResultTextSize"/>

        <TextView
            android:id="@+id/payfor_et"
            android:layout_width="0px"
            android:layout_height="@dimen/payResultTextHeight"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_white"
            android:gravity="center_vertical|left"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/black1"
            android:textSize="@dimen/payResultTextSize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="top">

        <TextView
            android:layout_width="0px"
            android:layout_height="@dimen/payResultTextHeight"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/pay_odd_change"
            android:textColor="@color/white"
            android:textSize="@dimen/payResultTextSize"/>

        <TextView
            android:id="@+id/payfor_tv3_2"
            android:layout_width="0px"
            android:layout_height="@dimen/payResultTextHeight"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="@string/base_price"
            android:textColor="@color/white"
            android:textSize="@dimen/payResultTextSize"/>
    </LinearLayout>

</LinearLayout>